updated package.json and tsconfig.json

--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "task-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node dist/index.js",
     "build": "tsc",
-    "start:dev": "nodemon index.ts"
+    "start": "node dist/index.js",
+    "dev": "ts-node-dev src/index.ts"
   },
   "author": "Viswanath",
   "license": "ISC",
@@ -28,6 +27,6 @@
     "@types/express": "^5.0.3",
     "@types/node": "^24.8.1",
     "nodemon": "^3.1.9",
-    "ts-node": "^10.9.2"
+    "ts-node-dev": "^2.0.0"
   }
 }
